# USTC_CG_26

Framework2D/diagrams/: 1_MiniDraw.puml
Framework2D/src/assignments/1_MiniDraw/: canvas_widget.cpp  canvas_widget.h  minidraw_window.cpp
Framework2D/src/assignments/1_MiniDraw/shapes/: ellipse.cpp  ellipse.h  polygon.cpp  polygon.h
Framework2D/src/assignments/2_ImageWarping/: warping_widget.cpp
Framework2D/src/assignments/2_ImageWarping/warper/: IDW_warper.h  RBF_warper.h  warper.h
Framework2D/src/assignments/3_PoissonImageEditing/: CMakeLists.txt  poisson_window.cpp  seamless_clone.cpp  seamless_clone.h  target_image_widget.cpp  target_image_widget.h
Homeworks/1_mini_draw/: report.typ
Homeworks/2_image_warping/: README.md  report.typ
Homeworks/3_poisson_image_editing/: report.typ
